# geneva

./: CMakeLists.txt
examples/geneva/16_GGenericStarter/: CMakeLists.txt  GGenericStarter.cpp
include/: CMakeLists.txt
include/common/: GThreadGroup.hpp
include/geneva-interface/: CMakeLists.txt  GOptions.hpp  GenericIndividual.hpp  GenericIndividual.tcc  GenericOptimizer.hpp  GenericStarter.tcc  Go3.hpp
